--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,17 @@
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
+/* ---------------- dark theme css ---------------- */
+.dark-theme-page {
+  --color-background: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -58,6 +69,7 @@ body {
     gap: 1.8rem;
     grid-template-columns: 14rem auto 23rem;
 }
+
 
 a{
     color: var(--color-dark);
@@ -128,33 +140,33 @@ b{
     color: var(--color-warning);
 }
 
-aside {
+leftside {
     height: 100vh;
 }
 
-aside .top{
-    background: white;
+leftside .top{
+    background: var(--color-background);
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 1.4rem;
 }
 
-aside .logo {
+leftside .logo {
     display: flex;
     gap: 0.8rem;
 }
 
-aside .logo img {
+leftside .logo img {
     width: 2rem;
     height: 2rem;
 }
 
-aside .close {
+leftside .close {
     display: none;
 }
 
-aside .sidebar {
+leftside .sidebar {
 
     display: flex;
     flex-direction: column;
@@ -163,11 +175,11 @@ aside .sidebar {
     top: 3rem;
 }
 
-aside h3{
+leftside h3{
     font-weight: 500;
 }
 
-aside .sidebar a{
+leftside .sidebar a{
     display: flex;
     color: var(--color-info-dark);
     margin-left: 2rem;
@@ -178,45 +190,45 @@ aside .sidebar a{
     transition: all 300ms ease;
 }
 
-aside .sidebar a span{
+leftside .sidebar a span{
     font-size: 1.6rem;
     transition: all 300ms ease;
 }
 
-aside .sidebar a:last-child {
+leftside .sidebar a:last-child {
     position: absolute;
     bottom: 2rem;
     width: 100%;
 }
 
-aside .sidebar a.active{
+leftside .sidebar a.active{
     background: var(--color-light);
     color: var(--color-primary);
     margin-left: 0;
 }
 
-aside .sidebar a.active:before{
+leftside .sidebar a.active:before{
     content: '';
     width: 6px;
     height: 100%;
     background: var(--color-primary);
 }
 
-aside .sidebar a.active span{
+leftside .sidebar a.active span{
     color: var(--color-primary);
     margin-left: calc(1rem - 3px);
 }
 
-aside .sidebar a:hover{
+leftside .sidebar a:hover{
     color: var(--color-primary);
     
 }
 
-aside .sidebar a:hover span{
+leftside .sidebar a:hover span{
     margin-left: 1rem;
 }
 
-aside .sidebar .message-count {
+leftside .sidebar .message-count {
     background: var(--color-danger);
     color: var(--color-white);
     padding: 2px 10px;
@@ -385,7 +397,7 @@ main .recent-orders a {
 
 .right .top {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     gap: 2rem;
 }
 
@@ -452,15 +464,15 @@ main .recent-orders a {
     margin-bottom: 1rem;
 }
 
-.right .sales-analytics {
+.right .analytics {
     margin-top: 2rem;
 }
 
-.right .sales-analytics h2{
+.right .analytics h2{
     margin-bottom: 0.8rem;
 }
 
-.right .sales-analytics .item {
+.right .analytics .item {
     background: var(--color-white);
     display: flex;
     align-items: center;
@@ -472,20 +484,51 @@ main .recent-orders a {
     transition: all 400ms ease;
 }
 
-.right .sales-analytics .item:hover{
+.right .analytics .item:hover{
     box-shadow: none;
 }
 
-.right .sales-analytics .item .right{
+.right .analytics .item .right{
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     margin: 0;
     width: 100%;
 }
 
+.right .analytics .item .icon{
+    padding: 0.6rem;
+    color: var(--color-white);
+    border-radius: 50%;
+    background: var(--color-primary);
+    display: flex;
+}
 
+.right .analytics .item.steps .icon {
+    background: var(--color-danger);
+}
 
+.right .analytics .item.pl .icon {
+    background: var(--color-success);
+}
 
+.right .analytics .add-analytics{
+    background-color: transparent;
+    border: 2px dashed var(--color-primary);
+    color: var(--color-primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right .analytics .add-analytics div{
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+}
+
+.right .analytics .add-analytics div h3{
+    font-weight: 600;
+}
 
 
