--- a/public/notification.css
+++ b/public/notification.css
@@ -256,95 +256,169 @@ main {
     margin-top: 1.4rem;
 }
 
-main .personal-information{
+main .date{
+    display: inline-block;
+    background: var(--color-light);
+    border-radius: var(--border-radius-1);
+    margin-top: 1rem;
+    padding: 0.5rem 1.6rem;
+
+}
+
+main .date input[type='date']{
+    background: transparent;
+    color: var(--color-dark);
+
+}
+
+main .insights{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+}
+
+main .insights > div {
+    
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-top: 10px;
+    box-shadow: var(--box-shadow);
+    transition: all 400ms ease;
+}
+main .insights > div:hover {
+    
+    box-shadow: none;
+}
+
+main .insights > div span{
+    
+    background: coral;
+    padding: 8px;
+    border-radius: 50%;
+    color: var(--color-white);
+    font-size: 25px;
+}
+
+main .insights > div.steps span{
+    background: var(--color-danger);
+}
+
+main .insights > div.calories span{
+    background: var(--color-success);
+}
+
+main .insights > div .middle {
     display: flex;
     align-items: center;
-    justify-content:space-evenly;
-}
-main .personal-information .about-me{
-    width: 25%;
-    height: 25%;
-    overflow: hidden;
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    text-align: left;
-    transition: all 400ms ease;
-    
-}
-main .personal-information .my-info{
-    width: 65%;
-    height: 70%;
-    overflow: hidden;
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    text-align: left;
-    
-    
-}
-main .personal-information .my-info .column{
-    float: left;
-  width: 50%;
-  padding: 10px;
-  height: 520px;
-    
-}
-main .personal-information .my-info h2{
-    padding: 10px;
- }
- main .personal-information .my-info div{
-    padding: 10px;
-   
- }
-main .personal-information .about-me h2{
-    font-size: medium;
-    text-align: left;
+    justify-content: space-between;
 }
 
-main .personal-information .about-me .info-item p {
-    font-weight: 900;
-    color:var(--color-info-light);
-    padding: 8px 0;
-}
-main .personal-information .about-me .info-item p span{
-    font-weight: 200;
-    display: inline-block;
-    color:var(--color-dark-variant);
+main .insights h3 {
+    
+    margin: 1rem 0 0.6rem;
+    font-size: 1rem;
 }
 
-main .personal-information .about-me .picture{
-    border-radius: 5%;
-    padding-bottom: 12px;
-}
-main .personal-information .about-me .bio{
-    padding-bottom: 2rem;
+main .insights .progress {
+    
+    position: relative;
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
 }
 
-main .personal-information{
+main .insights svg {
+    
+   width: 7rem;
+   height: 7rem;
+}
+
+main .insights svg circle {
+    fill: none;
+    stroke: var(--color-primary);
+    stroke-width: 14;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+    stroke-dasharray: 110;
+    stroke-dashoffset: 92;
+}
+
+main .insights .spendings svg circle{
+    
+    stroke-dashoffset: -40;
+    stroke-dasharray: 200;
+}
+
+main .insights .steps svg circle{
+    /* stroke-dashoffset: 50; */
+    stroke-dasharray: 1;
+}
+
+main .insights .calories svg circle{
+    /*stroke-dashoffset: 35;
+    stroke-dasharray: 110;*/
+    stroke-dasharray: 1;
+}
+
+main .insights .progress .number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .insights small{
+    
+    margin-top: 1.3rem;
+    display: block;
+}
+
+main .recent-spendings{
     margin-top: 2rem;
 }
 
-main .personal-information h2{
-    margin-bottom: 0.4rem;
+main .recent-spendings h2{
+    margin-bottom: 0.8rem;
 }
 
-.section .container{
-    padding-top: 60px;
-    padding-bottom: 70px;
-}
-.section-title{
-    flex: 0 0 100%;
-    max-width: 100%;
-    
-}
-.section-title h2{
-    font-size: 40px;
-    font-weight: 700;
-    position: relative;
+main .recent-spendings table{
+    background: var(--color-white);
+    width: 100%;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    text-align: center;
+    box-shadow: var(--box-shadow);
+    transition: all 400ms ease;
 }
 
+main .recent-spendings table:hover{
+    box-shadow: none;
+}
 
+main table tbody td{
+    height: 2.8rem;
+    border-bottom: 1px solid var(--color-light);
+    color: var(--color-dark-variant);
+}
+main table tbody tr:last-child td {
+    border: none;
+}
+
+main .recent-spendings .transaction-name {
+    font-weight: 500;
+}
+
+main .recent-spendings a {
+    text-align: center;
+    display: block;
+    margin: 1rem auto;
+    color: var(--color-primary);
+}
 
 .right {
     margin-top: 1.4rem;
